force-app/main/default/objects/CampaignMember/fields/mcdm_15__DM_Auto_Send__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Auto_Send__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Auto Send</label>
    <referenceTo>mcdm_15__DM_Auto_Send__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>