force-app/main/default/objects/CampaignMember/fields/mcdm_15__JourneyApprovalState__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__JourneyApprovalState__c</fullName>
    <description>Campaign member&apos;s approval state for a single journey / campaign pair. The status controls if a member is available for approval, or reflects an on-journey, rejected, or error state.</description>
    <label>Journey Approval State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>